--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -19,6 +19,11 @@
            org.springframework.web.context.ContextLoaderListener
         </listener-class>
  </listener>
+ <listener>
+ 	<listener-class>
+ 		com.frame.action.ApplicationContextUtils
+ 	</listener-class>
+ </listener>
  <!--  --><context-param>  
     <param-name>log4jConfigLocation</param-name>  
     <param-value>classpath:/com/skss/portal/config/log4j.properties</param-value>  
