--- a/WebRoot/WEB-INF/classes/com/skss/portal/config/log4j.properties
+++ b/WebRoot/WEB-INF/classes/com/skss/portal/config/log4j.properties
@@ -10,7 +10,7 @@ log4j.appender.console.layout.ConversionPattern =%d %-5p %m %n
 log4j.appender.logFile.Encoding=utf-8
 log4j.appender.logFile=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.logFile.Threshold=DEBUG
-log4j.appender.logFile.File=C:/Users/Administrator/workspace/portal/WebRoot/log/portal_log.log
+log4j.appender.logFile.File=F:/portal/portal_log.log
 log4j.appender.logFile.DatePattern='_'yyyy-MM-dd'.log'
 log4j.appender.logFile.layout = org.apache.log4j.PatternLayout 
 log4j.appender.logFile.layout.ConversionPattern =%d{yyyy-MM-dd HH:mm:ss} <%m> - [%c]  - %p   %n
