--- a/WebRoot/WEB-INF/classes/com/skss/portal/config/jdbc.properties
+++ b/WebRoot/WEB-INF/classes/com/skss/portal/config/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://192.168.1.226:3306/portal_test_guozhigang??useUnicode=true&characterEncoding=utf-8
+jdbc.url=jdbc:mysql://127.0.0.1:3306/portal??useUnicode=true&characterEncoding=utf-8
 jdbc.username=root
-jdbc.password=java
+jdbc.password=root
